page width overflow fix

--- a/valora-frontend/src/index.css
+++ b/valora-frontend/src/index.css
@@ -80,6 +80,7 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
   font-family: "Overlock", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
